trying to test the github action